style fix for overlapping header buttons

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -312,7 +312,7 @@ form.save-profile {
 
 	.header-buttons {
 		text-align: right;
-		margin-top: -30px;
+		margin-top: 0px;
 	}
 	p.desc {
 		width: 100%;
